--- a/js/galleria/plugins/history/history-demo.html
+++ b/js/galleria/plugins/history/history-demo.html
@@ -26,7 +26,7 @@
         <script src="../../galleria.js"></script>
 
         <!-- load the History plugin, no need for further scripting -->
-        <script src="../../plugins/history/galleria.history.js"></script>
+        <script src="galleria.history.js"></script>
 
     </head>
 <body>
@@ -38,10 +38,10 @@
 
         <div id="galleria">
             <a href="http://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Locomotives-Roundhouse2.jpg/800px-Locomotives-Roundhouse2.jpg">
-            	<img title="Locomotives Roundhouse"
-            	     alt="Steam locomotives of the Chicago &amp; North Western Railway."
-            	     src="http://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Locomotives-Roundhouse2.jpg/100px-Locomotives-Roundhouse2.jpg">
-        	</a>
+                <img title="Locomotives Roundhouse"
+                     alt="Steam locomotives of the Chicago &amp; North Western Railway."
+                     src="http://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Locomotives-Roundhouse2.jpg/100px-Locomotives-Roundhouse2.jpg">
+            </a>
             <a href="http://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Icebergs_in_the_High_Arctic_-_20050907.jpg/1000px-Icebergs_in_the_High_Arctic_-_20050907.jpg">
                 <img title="Icebergs in the High Arctic"
                      alt="”The debris loading isn't particularly extensive, but the color is usual.”"
@@ -84,17 +84,17 @@
             </a>
         </div>
 
-        <p class="cred">Made by <a href="http://galleria.aino.se">Galleria</a>.</p>
+        <p class="cred">Made by <a href="http://galleria.io">Galleria</a>.</p>
     </div>
 
     <script>
+    $(function() {
+        // Load the classic theme
+        Galleria.loadTheme('../../themes/classic/galleria.classic.js');
 
-    // Load the classic theme
-	Galleria.loadTheme('../../themes/classic/galleria.classic.js');
-
-	// Initialize Galleria
-	$('#galleria').galleria();
-
+        // Initialize Galleria
+        Galleria.run('#galleria');
+    });
     </script>
     </body>
 </html>
