clean up recipes; add print
- also fix extraneous closing html tag

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,7 @@
     <meta name="keywords" content="andy hill,andy,hill,developer,iu,code,IU,Indiana University"/>
     <meta name="description" content="Home page for Andy Hill, web developer in Bloomington, IN"/>
     <meta name="author" content="Andy Hill"/>
-    <meta name="copyright" content="andyhill.us"/> "
-    />
+    <meta name="copyright" content="andyhill.us"/> 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/icons/icon_192x192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
